<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFF"
    tools:context=".Credits">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/aboutus"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- START -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/Autors1"
        android:textSize="12pt"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <TextView
        android:id="@+id/textView21"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:text="@string/Autors1NIM"
        android:textAlignment="center"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/Autors2"
        android:textAlignment="center"
        android:textSize="12pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />
    <TextView
        android:id="@+id/textView31"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:text="@string/Autors2NIM"
        android:textAlignment="center"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/Autors4"
        android:textAlignment="center"
        android:textSize="12pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView41" />
    <TextView
        android:id="@+id/textView51"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:text="@string/Autors4NIM"
        android:textAlignment="center"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/Autors3"
        android:textAlignment="center"
        android:textSize="12pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />
    <TextView
        android:id="@+id/textView41"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:text="@string/Autors3NIM"
        android:textAlignment="center"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>